the second Dynamic visible scroll-up link fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -204,8 +204,3 @@ body, html {
     padding: 15px;
     border-radius: 4px;
   }
-
-  #move2 {
-    color: #fff;
-    margin-left: 5%;
-  } 
