--- a/assets/styleMobile.css
+++ b/assets/styleMobile.css
@@ -204,8 +204,4 @@ body, html {
     padding: 15px;
     border-radius: 4px;
   }
-
-  #move2 {
-    color: #fff;
-    margin-left: 5%;
-  } 
+ 
